# InGest-LLM.as

./: .dockerignore  .env  .env.example  .env.vault  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  api_ingestion_endpoints.md  docker-compose.README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  test_chat_sample.txt  test_chat_summarizer.py
.github/workflows/: pull_request_check.yml
.ingest/: High Tasks .md  High-Level Agent Task List 20082025.md  High-Level Task List 18082025.md  High-Level Task List 19082025.md  beta.ingest.as.json  constrat.poml.ingest.as.md  session.ingest.as.poml
.md/.project/: plan.project.as.md  task.project.as.md
.md/.projects/: ECOSYSTEM_CONSOLIDATION_PLAN.md  SPRINT_EXECUTION_LOG_20250824.md  current_context.md  integration_progress_20250819.md  integration_progress_20250819_010446.md
context_portal/alembic/versions/: 2025_06_17_initial_schema.py
docs/: ECOSYSTEM_INGESTION_COMPLETE.md  EMBEDDING_AGENT_ARCHITECTURE.md  EMBEDDING_AGENT_IMPLEMENTATION.md  EMBEDDING_INTEGRATION_COMPLETE.md  INTEGRATION_TESTING.md  PROGRESS.md  PROGRESS_TRANSFER_SUMMARY.md  QWEN_PROJECT_ANALYSIS.md  REPOSITORY_PROGRESS_TRACKING.md  STATUS.md  api_ingestion_endpoints.md  nomic_system_prompt.md  observability-dashboard.md  observability-implementation-summary.md
docs/reference/: analysis.md  index.md  ingestion.md  observability.md  services.md
integration/: tools_as_integration.py
prompts/: agent_context_bullet_20250819.poml  agent_context_template.poml  critical_blocker.poml  mission_brief.poml  priority_tasks.poml  project_status.poml
scripts/: analyze_embedding_efficiency.py  analyze_repository.py  build_docs.py  chat_thread_summarizer.py  eod_ecosystem_update.py  generate_context_bullet.py  generate_embedding_docs.py  generate_project_docs.py  qwen_demo_success.py  qwen_project_analysis.py  run_core_integration_tests.py  simple_ecosystem_test.py  simple_qwen_test.py  simple_repo_analysis.py
src/ingest_llm_as/: config.py  main.py  models.py
src/ingest_llm_as/api/: __init__.py  analysis.py  ecosystem.py  ingestion.py  repository.py
src/ingest_llm_as/observability/: __init__.py  langfuse_client.py  logging.py  metrics.py  setup.py  tracing.py
src/ingest_llm_as/parsers/: __init__.py  python_ast_parser.py
src/ingest_llm_as/services/: __init__.py  ecosystem_ingestion.py  llm_cache.py  memos_client.py  nomic_code_analyzer.py  progress_logger.py  project_analyzer.py  project_documentation_generator.py  repository_processor.py  vectorizer.py
src/ingest_llm_as/utils/: __init__.py  (+1 more)
test_output/: chat_summary_20250819_031314.json  chat_summary_20250819_031314.md  chat_summary_20250819_060853.json  chat_summary_20250819_060853.md  chat_summary_20250819_061008.json  chat_summary_20250819_061008.md
tests/: context_bullet_test.md  embedding_integration_demo.py  pytest.ini  test_ecosystem_ingestion.py  test_embedding_integration.py  test_ingestion_e2e.py  test_langfuse_connection.py  test_langfuse_decorator.py  test_llm_trace.py  test_memos_integration_core.py  test_nomic_embeddings.py  test_qwen_integration.py  test_repository_ingestion.py
