[tool.poetry]
name = "ingest-llm-as"
version = "0.1.0"
description = "A microservice for ingesting data into the ApexSigma ecosystem."
license = "MIT"
authors = ["SigmaDev11 <steynsean11@gmail.com>"]
readme = "README.md"
packages = [{include = "ingest_llm_as", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-exporter-jaeger-thrift = "^1.20.0"
opentelemetry-instrumentation-httpx = "^0.41b0"
structlog = "^23.1.0"
langfuse = "^2.14.0"
openai = "^1.34.0"
numpy = "^1.26.0"
poml = ">=0.0.7,<0.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
pre-commit = "^3.7.1"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
